# conllu2xml

./: MANIFEST.in  README.md  pyproject.toml  setup.py
conllu2xml/conlluconvert/: conllu2xml.py  main.py  xml2trf.py
conllu2xml/conlluparse/: clean_all.py  combine_all.py  main.py  setting_conllu.py
conllu2xml/ner/: ner_de.py  ner_es.py  ner_fr.py  ner_ru.py
src/conllu2xml/NER/: Tuecaser&NER.ipynb
src/conllu2xml/conlluconvert/: Conllu2Xml.ipynb  conllu2xml.py
src/conllu2xml/conlluparse/: clean_all.py  main.py  setting_conllu.py
src/conlluconvert/: Conllu2Xml.ipynb
src/conlluparse/: __init__.py  clean_all.py  combine_all.py  main.py  setting_conllu.py
tests/: sequoia-ud.conllu  sequoia-ud_tested.conllu  test_combine_all.py  test_conlluparse.py  test_setting_conllu.py
