[conllu2xml]

#$ pip install conllu2xml

name = "conllu2xml"
version = "1.0.0"

authors = [
	{ name = "Natalia Kuzminykh", 
	email = "contact@nataliakzm.codes"}]

readme = "README.md"

requires-python = ">=3.8.10"

keywords = ["conllu", "xml", "trf", "UD", "corpus", "parse", "convert", "linguistic"]

classifiers = ["Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License"]

dependencies = [
	"argparse",
	"os-sys",
	"regex",
	"stanza",
	"nltk"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
