[tool.poetry]
name = "conllu2xml"
version = "1.0.0"
description = "Converts, clean and parse CoNLL-U files to XML and/or TRF files"
authors = ["Natalia Kuzminykh <contact@nataliakzm.codes>"]
readme = "README.md"
keywords = ["conllu", "xml", "trf", "UD", "corpus", "parse", "convert", "linguistic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = ">=3.8.10"
argparse = "*"
regex = "*"
stanza = "*"
nltk = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
